--- a/pages/index.css
+++ b/pages/index.css
@@ -1,7 +1,9 @@
 @import url(../vendor/normalize.css);
-@import url(../fonts/fonts.css);
+@import url(../vendor/fonts/fonts.css);
 /* Page */
 @import url(../blocks/page/page.css);
+/* Wrapper */
+@import url(../blocks/wrapper/wrapper.css);
 /* Header */
 @import url(../blocks/header/header.css);
 @import url(../blocks/header/__logo/header__logo.css);
