--- a/blocks/footer/__link/footer__link.css
+++ b/blocks/footer/__link/footer__link.css
@@ -3,6 +3,11 @@
   color: #fff;
   font-size: 16px;
   line-height: 1.125;
+  transition: opacity 0.3s ease;
+}
+
+.footer__link:hover {
+  opacity: 0.8;
 }
 
 @media (max-width: 740px) {
