--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -3,6 +3,11 @@
   font-size: 24px;
   line-height: 1.16;
   color: #fff;
+  transition: opacity 0.3s ease;
+}
+
+.header__lang-link:hover {
+  opacity: 0.8;
 }
 
 @media (max-width: 320px) {
