Fixed some styles in CSS and added font optimization

--- a/blocks/cover/__subtitle/cover__subtitle.css
+++ b/blocks/cover/__subtitle/cover__subtitle.css
@@ -9,6 +9,7 @@
 
 @media (max-width: 650px) {
   .cover__subtitle {
+    max-width: 288px;
     margin-top: 16px;
     font-size: 14px;
     line-height: 1.14;
