--- a/blocks/header/header.css
+++ b/blocks/header/header.css
@@ -1,17 +1,18 @@
 .header {
   display: flex;
   justify-content: space-between;
-  padding: 28px 48px 0;
+  align-items: flex-end;
+  padding: 0 48px;
 }
 
 @media (max-width: 768px) {
   .header {
-    padding: 28px 24px 0;
+    padding: 0 24px;
   }
 }
 
 @media (max-width: 320px) {
   .header {
-    padding: 16px 16px 0;
+    padding: 0 16px;
   }
 }
