--- a/blocks/lead/__subtitle/lead__subtitle.css
+++ b/blocks/lead/__subtitle/lead__subtitle.css
@@ -1,14 +1,15 @@
 .lead__subtitle {
   max-width: 640px;
-  margin: 34px auto 0 auto;
+  margin: 34px auto 0;
   font-size: 30px;
   line-height: 1.2;
   text-align: center;
 }
 
-@media (max-width: 320px) {
+@media (max-width: 520px) {
   .lead__subtitle {
     max-width: 288px;
+    margin-top: 16px;
     font-size: 16px;
     line-height: 1.25;
   }
