--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,4 +2,9 @@
   background-color: #2a2c2f;
   font-family: "Inter", sans-serif;
   color: #fff;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
+  -moz-text-size-adjust: 100%;
 }
