--- a/blocks/photo-grid/photo-grid.css
+++ b/blocks/photo-grid/photo-grid.css
@@ -2,7 +2,7 @@
   padding: 92px 48px 0;
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(284px, 1fr));
-  grid-template-rows: repeat(auto-fit, 1fr);
+  grid-template-rows: 1fr;
   gap: 16px;
 }
 
@@ -14,6 +14,7 @@
 
 @media (max-width: 320px) {
   .photo-grid {
+    gap: 12px 0;
     padding: 64px 16px 0;
   }
 }
