--- a/blocks/wrapper/wrapper.css
+++ b/blocks/wrapper/wrapper.css
@@ -1,4 +1,13 @@
 .wrapper {
   max-width: 1280px;
   margin: 0 auto;
+  padding: 28px 0 24px 0;
+}
+
+@media (max-width: 320px) {
+  .wrapper {
+    max-width: 1280px;
+    margin: 0 auto;
+    padding-top: 16px;
+  }
 }
