--- a/blocks/cover/__overlay/cover__overlay.css
+++ b/blocks/cover/__overlay/cover__overlay.css
@@ -6,7 +6,7 @@
   background-size: cover;
   background-position: center;
   width: 100%;
-  height: 740px;
+  min-height: 740px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -33,19 +33,19 @@
 
 @media (max-width: 1024px) {
   .cover__overlay {
-    height: 640px;
+    min-height: 640px;
   }
 }
 
 @media (max-width: 768px) {
   .cover__overlay {
-    height: 480px;
+    min-height: 480px;
   }
 }
 
 @media (max-width: 320px) {
   .cover__overlay {
-    height: 200px;
+    min-height: 200px;
   }
 }
 
