--- a/blocks/footer/footer.css
+++ b/blocks/footer/footer.css
@@ -1,12 +1,12 @@
 .footer {
   display: flex;
   justify-content: space-between;
-  padding: 92px 48px 24px;
+  padding: 92px 48px 0;
 }
 
 @media (max-width: 768px) {
   .footer {
-    padding: 88px 24px 24px;
+    padding: 88px 24px 0;
   }
 }
 
@@ -14,7 +14,7 @@
   .footer {
     max-width: 186px;
     flex-direction: column;
-    padding: 64px 16px 24px;
+    padding: 64px 16px 0;
   }
 }
 
