--- a/blocks/intro/__list/intro__list.css
+++ b/blocks/intro/__list/intro__list.css
@@ -2,6 +2,7 @@
   list-style-type: none;
   margin: 33px 0 0;
   padding: 0;
+  font-weight: 700;
   font-size: 12px;
-  line-height: 1.5;
+  line-height: 18px;
 }
