--- a/blocks/place/__paragraph/place__paragraph.css
+++ b/blocks/place/__paragraph/place__paragraph.css
@@ -1,22 +1,16 @@
 .place__paragraph {
-  margin: 0;
+  margin: 0 0 26px 0;
   font-size: 18px;
   line-height: 1.6;
 }
 
-.place__paragraph:nth-child(2) {
-  margin: 26px 0 0 0;
+.place__paragraph:last-child {
+  margin: 0;
 }
 
 @media (max-width: 768px) {
   .place__paragraph {
     font-size: 16px;
-  }
-}
-
-@media (max-width: 320px) {
-  .place__paragraph {
-    padding: 0 16px;
   }
 }
 
