--- a/blocks/place/__website/place__website.css
+++ b/blocks/place/__website/place__website.css
@@ -3,6 +3,9 @@
   padding: 0;
   list-style-type: none;
   align-self: end;
+  display: flex;
+  flex-direction: column;
+  row-gap: 12px;
 }
 
 @media (max-width: 320px) {
